--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Local .terraform directories
-/.terraform/
+/terraform_setup/.terraform/
 .terraform.lock.hcl
 terraform.tfstate
 terraform.tfstate.backup
